hphp/hack/test/typecheck/ternary8.php.like_types.exp
File "ternary8.php", line 3, characters 12-15:
Invalid return type (Typing[4110])
File "ternary8.php", line 3, characters 22-24:
Expected int
File "ternary8.php", line 3, characters 12-15:
But got null
